commit with disease control,healthy tips title wrapping issue in mobile and tab,google play store coming soon title removal in all interface...

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -36,17 +36,15 @@
 
 @media (max-width: 991px) {
 
-    .popupContainer{
-        top:100px!important;
-        left:50%!important;
-    }
-
     .popupContainer.width-28{
         width: 40% !important;
     }
 
     .boxed-page, .boxed-page header {
         width: 100%;
+    }
+    .popupContainer{
+        top: -1px !important;
     }
     
     .classic-testimonials {
@@ -156,6 +154,17 @@
         float: right;
         margin-right: 20px;
         z-index: 2;
+    }
+    .action_btns .btn{
+        white-space: normal;
+    }
+    h4.classic-title {
+        font-size: 18px;
+        line-height: 24px
+
+    }
+    h4.classic-title span {
+        border-bottom: none;
     }
     
 }
@@ -958,7 +967,7 @@
     }
 
     .spinner-profile{
-        width:180px; /* vinothkumarrepo 11Aug16 */
+        width:180px;
         height:180px;
         padding:78px 81px;
     }
@@ -1229,6 +1238,9 @@
     .padding-response-inverse{
         padding: 0!important;
     }
+    .action_btns .btn{
+        white-space: normal;
+    }
 }
 
 @media (min-width: 1300px){
@@ -1263,6 +1275,7 @@
     .session input[type=radio] + label{
         padding: 0 10px ;
     }
+
     #sidemenu li a {
         padding: 8px 5px 8px 15px !important;
         height:55px!important;
@@ -1304,8 +1317,8 @@
         display: none;
     }
     h2 {
-        font-size: 22px;
-        line-height: 20px;
+        font-size: 13px;
+        line-height: 19px;
     }
     .slider-font h1 .h4 {
         font-weight: 500;
@@ -1316,10 +1329,26 @@
         font-size: 12px;
         padding: 2px 10px;
     }
+  .slider-font a {
+        font-family: inherit;
+        text-shadow: none;
+        line-height: 17px!important;
+    }
 
     h5.classic-title {
         font-size: 13px!important;
         line-height: 18px !important;
+       }
+    h4.classic-title {
+          font-size: 18px !important;
+          line-height: 24px !important;
+
+    }
+    h4.classic-title span {
+        border-bottom: none;
+    }
+    .action_btns .btn{
+        white-space: normal;
     }
     .navbar-default .navbar-toggle i {
         color: #bbb;
@@ -1387,6 +1416,7 @@
     display: inline;
 }
 
+
 @media (min-width: 768px) and (max-width: 1120px) {
     .sm-show{
         display: none!important;
@@ -1400,6 +1430,7 @@
         display: inline;
     }
 }
+
 
 @media (min-width: 768px) and (max-width: 850px) {
     .xsm-show{
